sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:11: error: Boolean does not take parameters
     else(i-j==0){
                 ^